[gd_scene load_steps=11 format=3 uid="uid://bwdnb2bq3lqu"]

[ext_resource type="Texture2D" uid="uid://dfxmwf87yarj8" path="res://assets/gun_sprites.png" id="1_ilpaf"]
[ext_resource type="Script" path="res://player.gd" id="1_o2qkt"]
[ext_resource type="AudioStream" uid="uid://d0j10tjw3ayoc" path="res://assets/revolver_shot1.wav" id="2_irvoe"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_uyb5b"]

[sub_resource type="AtlasTexture" id="AtlasTexture_a50e3"]
atlas = ExtResource("1_ilpaf")
region = Rect2(0, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_xukwn"]
atlas = ExtResource("1_ilpaf")
region = Rect2(512, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_x80ki"]
atlas = ExtResource("1_ilpaf")
region = Rect2(1024, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_0sogn"]
atlas = ExtResource("1_ilpaf")
region = Rect2(1536, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_ns4m8"]
atlas = ExtResource("1_ilpaf")
region = Rect2(0, 0, 512, 512)

[sub_resource type="SpriteFrames" id="SpriteFrames_6d3jr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a50e3")
}],
"loop": true,
"name": &"idle",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xukwn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x80ki")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0sogn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ns4m8")
}],
"loop": false,
"name": &"shoot",
"speed": 10.0
}]

[node name="Player" type="CharacterBody3D" groups=["player"]]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_o2qkt")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_uyb5b")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 1.5, 2.08165e-12)

[node name="RayCast3D" type="RayCast3D" parent="Camera3D"]
target_position = Vector3(2.08165e-12, 2.08165e-12, -1000)
collision_mask = 3

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GunBase" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="GunAnimation" type="AnimatedSprite2D" parent="CanvasLayer/GunBase"]
position = Vector2(465, 345)
scale = Vector2(0.908936, 0.837158)
sprite_frames = SubResource("SpriteFrames_6d3jr")
animation = &"idle"

[node name="Point" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.5
offset_top = -4.5
offset_right = 4.5
offset_bottom = 4.5
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0, 0, 1)

[node name="DeathScreen" type="Panel" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -169.0
offset_top = -137.0
offset_right = 169.0
offset_bottom = 137.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/DeathScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -58.0
offset_right = 91.0
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "Moriste!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartBtn" type="Button" parent="CanvasLayer/DeathScreen"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -37.5
offset_right = 65.0
offset_bottom = -6.5
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 35
text = "Reinicia partida"

[node name="ShootAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_irvoe")
bus = &"Sfx"

[connection signal="animation_finished" from="CanvasLayer/GunBase/GunAnimation" to="." method="_on_gun_animation_animation_finished"]
[connection signal="pressed" from="CanvasLayer/DeathScreen/RestartBtn" to="." method="_on_restart_btn_pressed"]
